# automata

./: .gitignore  CMakeLists.txt  README.md  code_table.c  code_table.h  gifgen.c  gifgen.h  grid.c  grid.h  lzw.c  lzw.h  main.c
gifgen/: gifgen.c
src/: CMakeLists.txt  conway.c  conway.h  grid.c  grid.h  input.c  input.h  main.c
src/gifgen/: code_table.c  colour.h  colour_table.c  colour_table.h  gifgen.c  gifgen.h  lzw.c  lzw.h
src/model/: conway.c  conway.h  model.c  model.h
test/: CMakeLists.txt  test.c  test_colour_table.c  test_lzw.c  valgrind.supp
